--- a/test.html
+++ b/test.html
@@ -9,18 +9,16 @@
 <p>hi</p>  
 <footer>
     <div class="footerStyle">
-        <h1> Out of character: </h1>
-        <h2> Sign up to our news letter: </h2>
-        
-        <div class="links">
-            <div class="vertical-links">
+        <div>
+            <div class="heading-container">
+                <h1> Out of character: </h1>
                 <a href="test.html">Contact</a>
-                <a href="about.html">About</a>
             </div>
-            <div class="horizontal-links">
-                <a href="terms.html">Terms of Service</a>
-                <a href="privacy.html">Privacy Policy</a>
-                <a href="faq.html">FAQ</a>
+        </div>
+        <div>
+            <div class="heading-container">
+                <h2> Sign up to our news letter: </h2>
+                <a href="test.html">False contact</a>
             </div>
         </div>
     </div>
