--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
  </nav>
    
   
- <p>hi</p>  
+ <div class="title">
+     <h1>Imperial Times</h1>
+ </div>
  <footer>
     <div class="footerStyle">
         <div>
